updated gmaven to 1.3 changed junit dependency to junit-dep 4.8.2 added dependency on hamcrest 1.2 (now that we use junit-dep) updated gradle wrapper to 0.9-rc-1

--- a/spock-core/pom.xml
+++ b/spock-core/pom.xml
@@ -28,6 +28,11 @@
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
     </dependency>
+    <dependency> <!-- Hamcrest support -->
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <scope>provided</scope>
+    </dependency>
     <dependency> <!-- clients that want to use org.spockframework.buildsupport need to include this dependency -->
       <groupId>asm</groupId>
       <artifactId>asm</artifactId>
@@ -40,7 +45,7 @@
     </dependency>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <artifactId>junit-dep</artifactId>
     </dependency>
     <dependency> <!-- clients that want to mock classes (in addition to interfaces) need to include this dependency -->
       <groupId>cglib</groupId>
@@ -51,6 +56,6 @@
       <groupId>org.objenesis</groupId>
       <artifactId>objenesis</artifactId>
       <optional>true</optional>
-    </dependency>     
+    </dependency>
   </dependencies>
 </project>
