--- a/spock-grails-support/pom.xml
+++ b/spock-grails-support/pom.xml
@@ -31,7 +31,7 @@
     </dependency>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <artifactId>junit-dep</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
