--- a/spock-grails/pom.xml
+++ b/spock-grails/pom.xml
@@ -22,7 +22,7 @@
     </dependency>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <artifactId>junit-dep</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.ant</groupId>
