--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <plugin>
           <groupId>org.codehaus.gmaven</groupId>
           <artifactId>gmaven-plugin</artifactId>
-          <version>1.2</version>
+          <version>1.3</version>
           <configuration>
             <providerSelection>1.6</providerSelection>
           </configuration>
@@ -90,7 +90,7 @@
             <dependency>
               <groupId>org.codehaus.gmaven.runtime</groupId>
               <artifactId>gmaven-runtime-1.6</artifactId>
-              <version>1.2</version>
+              <version>1.3</version>
               <exclusions>
                 <exclusion>
                   <groupId>org.codehaus.groovy</groupId>
@@ -150,8 +150,13 @@
       </dependency>
       <dependency>
         <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.8.1</version>
+        <artifactId>junit-dep</artifactId>
+        <version>4.8.2</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-core</artifactId>
+        <version>1.2</version>
       </dependency>
       <dependency>
         <groupId>asm</groupId>
