--- a/spock-example/build.gradle
+++ b/spock-example/build.gradle
@@ -10,7 +10,8 @@ dependencies {
   // mandatory dependencies for using Spock
   groovy "org.codehaus.groovy:groovy-all:1.6.9"
   testCompile "org.spockframework:spock-core:0.5-groovy-1.6-SNAPSHOT"
-  testCompile "junit:junit:4.8.1"
+  testCompile "junit:junit-dep:4.8.2"
+  testCompile "org.hamcrest:hamcrest-core:1.2"
 
   // optional dependencies for using Spock
   testRuntime "cglib:cglib-nodep:2.2"     // enables mocking of classes (in addition to interfaces)
@@ -22,7 +23,7 @@ dependencies {
 
 // creates bootstrap files (gradlew etc.) for Gradle build (not required for using Spock)
 task wrapper(type: Wrapper) {
-  gradleVersion = '0.8'
+  gradleVersion = '0.9-rc-1'
   jarPath = 'wrapper'
 }
 
