--- a/spock-example/pom.xml
+++ b/spock-example/pom.xml
@@ -18,7 +18,7 @@
       <plugin>
         <groupId>org.codehaus.gmaven</groupId>
         <artifactId>gmaven-plugin</artifactId>
-        <version>1.2</version>
+        <version>1.3</version>
         <configuration>
           <providerSelection>1.6</providerSelection>
         </configuration>
@@ -34,7 +34,7 @@
           <dependency>
             <groupId>org.codehaus.gmaven.runtime</groupId>
             <artifactId>gmaven-runtime-1.6</artifactId>
-            <version>1.2</version>
+            <version>1.3</version>
             <exclusions>
               <exclusion>
                 <groupId>org.codehaus.groovy</groupId>
@@ -83,7 +83,7 @@
 <!-- Only required if default Surefire configuration is not satisfactory -->
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.4.3</version>
+        <version>2.5</version>
         <configuration>
           <useFile>false</useFile>
         </configuration>
@@ -118,7 +118,13 @@
       <artifactId>objenesis</artifactId>
       <version>1.2</version>
       <scope>test</scope>
-    </dependency>    
+    </dependency>
+    <dependency> <!-- necessary if Hamcrest matchers are used -->
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <version>1.2</version>
+      <scope>test</scope>
+    </dependency>
 <!-- Dependencies used by examples in this project (not required for using Spock) -->
     <dependency>
       <groupId>com.h2database</groupId>
