--- a/wrapper/gradle-wrapper.properties
+++ b/wrapper/gradle-wrapper.properties
@@ -1,8 +1,8 @@
-#Sat Oct 03 01:05:16 GMT+00:00 2009
+#Sat Oct 23 22:18:51 GMT+00:00 2010
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
-distributionVersion=0.8
+distributionVersion=0.9-rc-1
 zipStorePath=wrapper/dists
 urlRoot=http\://dist.codehaus.org/gradle
 distributionName=gradle
