--- a/spock-spring/build.gradle
+++ b/spock-spring/build.gradle
@@ -12,6 +12,6 @@ project(":spock-spring") {
     testCompile "org.springframework:spring-tx:$springVersion"
     testRuntime h2database
     testRuntime log4j
-    testRuntime hamcrest_core // no idea who needs this, but get NoClassDefFoundError for org.hamcrest.SelfDescribing otherwise
+    testRuntime hamcrest_core // no idea why this is needed, but get NoClassDefFoundError for org.hamcrest.SelfDescribing otherwise
   }
 }
