--- a/spock-spring/pom.xml
+++ b/spock-spring/pom.xml
@@ -78,7 +78,7 @@
       <artifactId>log4j</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency> <!-- no idea who needs this, but get NoClassDefFoundError for org.hamcrest.SelfDescribing otherwise -->
+    <dependency> <!-- no idea why this is needed, but get NoClassDefFoundError for org.hamcrest.SelfDescribing otherwise -->
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-core</artifactId>
       <scope>test</scope>
