improved test output of spock-example ant build

--- a/spock-example/build.xml
+++ b/spock-example/build.xml
@@ -88,6 +88,7 @@
             classpathref="classpath.spock" />
         </fileset>
       </batchtest>
+      <formatter type="brief" usefile="false" />
     </junit>
   </target>
 
