--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
 }
 
 subprojects {
-  usePlugin("groovy")
+  apply plugin: "groovy"
 
   sourceCompatibility = 1.5
   targetCompatibility = 1.5
