more build updates

--- a/spock-example/build.xml
+++ b/spock-example/build.xml
@@ -43,6 +43,11 @@
         groupId="asm"
         artifactId="asm"
         version="2.2.3" />
+      <!-- only necessary if Hamcrest matchers are used -->
+      <dependency
+          groupId="org.hamcrest"
+          artifactId="hamcrest-core"
+          version="1.2" />
 <!-- Dependencies used by examples in this project (not required for using Spock) -->
       <dependency
         groupId="com.h2database"
