--- a/spock-example/pom.xml
+++ b/spock-example/pom.xml
@@ -119,7 +119,7 @@
       <version>1.2</version>
       <scope>test</scope>
     </dependency>
-    <dependency> <!-- necessary if Hamcrest matchers are used -->
+    <dependency> <!-- only necessary if Hamcrest matchers are used -->
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-core</artifactId>
       <version>1.2</version>
