--- a/spock-example/wrapper/gradle-wrapper.properties
+++ b/spock-example/wrapper/gradle-wrapper.properties
@@ -1,8 +1,8 @@
-#Sun Oct 24 03:32:50 GMT+00:00 2010
-distributionBase=GRADLE_USER_HOME
+#Thu Nov 04 03:27:01 GMT+00:00 2010
+distributionBase=PROJECT
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
-distributionVersion=0.9-rc-1
+zipStoreBase=PROJECT
+distributionVersion=0.9-rc-2
 zipStorePath=wrapper/dists
 urlRoot=http\://dist.codehaus.org/gradle
 distributionName=gradle
