--- a/spock-grails-support/pom.xml
+++ b/spock-grails-support/pom.xml
@@ -32,7 +32,6 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit-dep</artifactId>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.ant</groupId>
@@ -58,6 +57,12 @@
       <artifactId>grails-test</artifactId>
       <version>${grails.version}</version>
       <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.grails</groupId>
