--- a/spock-spring/pom.xml
+++ b/spock-spring/pom.xml
@@ -42,6 +42,12 @@
       <artifactId>spring-test</artifactId>
       <version>${spring.version}</version>
       <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
