--- a/spock-unitils/pom.xml
+++ b/spock-unitils/pom.xml
@@ -38,6 +38,12 @@
       <artifactId>unitils-core</artifactId>
       <version>3.1</version>
       <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 <!-- test dependencies -->
     <dependency>
@@ -45,6 +51,12 @@
       <artifactId>unitils-dbunit</artifactId>
       <version>3.1</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
