Ant build improvements

--- a/spock-example/build.xml
+++ b/spock-example/build.xml
@@ -104,6 +104,7 @@
             classpathref="classpath.spock" />
         </fileset>
       </batchtest>
+      <formatter type="brief" usefile="false" />
     </junit>
   </target>
 
