--- a/spock-example/build.xml
+++ b/spock-example/build.xml
@@ -27,7 +27,7 @@
       <dependency
         groupId="org.spockframework"
         artifactId="spock-core"
-        version="0.5-groovy-1.6-SNAPSHOT" />
+        version="0.5-groovy-1.6" />
 <!-- Optional dependencies for using Spock -->
       <!-- enables mocking of classes (in addition to interfaces) -->
       <dependency 
