--- a/spock-example/build.gradle
+++ b/spock-example/build.gradle
@@ -3,10 +3,10 @@ apply plugin: "idea"
 apply plugin: "eclipse"
 
 repositories {
+  // Spock release versions are available from Maven Central
   mavenCentral()
   // only required if a snapshot version of Spock is used
   mavenRepo urls: "http://m2repo.spockframework.org/snapshots"
-  mavenRepo urls: "http://m2repo.spockframework.org/releases"
 }
 
 dependencies {
