--- a/build.gradle
+++ b/build.gradle
@@ -8,15 +8,16 @@ allprojects {
   antDep = "org.apache.ant:ant:1.8.1" // use same version as Groovy 1.7
   asm = "asm:asm:3.2" // use same version as Groovy 1.7
   cglib = "cglib:cglib-nodep:2.2"
-  h2database = "com.h2database:h2:1.2.147"
-  junit = "junit:junit-dep:4.8.2"
-  hamcrest_core = "org.hamcrest:hamcrest-core:1.2"
-  log4j = "log4j:log4j:1.2.16"
-  objenesis = "org.objenesis:objenesis:1.2"  
   easymock = "org.easymock:easymock:3.0"
-  mockito = "org.mockito:mockito-all:1.8.5"
-  jmock_junit4 = "org.jmock:jmock-junit4:2.5.1"  
+  groovy = "org.codehaus.groovy:groovy-all:1.7.6"
+  h2database = "com.h2database:h2:1.2.147"
+  hamcrest_core = "org.hamcrest:hamcrest-core:1.2"
   jmock = "org.jmock:jmock:2.5.1"
+  jmock_junit4 = "org.jmock:jmock-junit4:2.5.1"
+  junit = "junit:junit-dep:4.8.2"
+  log4j = "log4j:log4j:1.2.16"
+  mockito = "org.mockito:mockito-all:1.8.5"
+  objenesis = "org.objenesis:objenesis:1.2"
 }
 
 subprojects {
@@ -29,7 +30,7 @@ subprojects {
   compileTestGroovy.options.fork = false
 
   dependencies {
-    groovy("org.codehaus.groovy:groovy-all:1.7.6")
+    groovy groovy
   }
 
   repositories {
@@ -38,7 +39,6 @@ subprojects {
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '0.9-rc-3'
-  jarPath = 'wrapper'
+  gradleVersion = "0.9"
 }
 
