--- a/spock-core/build.gradle
+++ b/spock-core/build.gradle
@@ -1,12 +1,13 @@
-project(":spock-core") {  
-  dependencies {  
-    compile asm
-    compile junit
-    compile hamcrest_core // until https://github.com/KentBeck/junit/issues/issue/165 gets fixed
-    compile cglib
-    compile objenesis
-    compile antDep
-    compile hamcrest_core
-  }
+applyReleaseProfile(project)
+
+dependencies {
+  compile asm
+  compile junit
+  compile hamcrest_core // until https://github.com/KentBeck/junit/issues/issue/165 gets fixed
+  compile cglib
+  compile objenesis
+  compile antDep
+  compile hamcrest_core
 }
+
 
