fixed messed up gradle build

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ antDep = "org.apache.ant:ant:1.8.1" // use same version as Groovy 1.7
 asm = "asm:asm:3.2" // use same version as Groovy 1.7
 cglib = "cglib:cglib-nodep:2.2"
 easymock = "org.easymock:easymock:3.0"
-groovy = "org.codehaus.groovy:groovy-all:1.8.4-SNAPSHOT"
+groovy = "org.codehaus.groovy:groovy-all:1.7.6"
 h2database = "com.h2database:h2:1.2.147"
 hamcrest_core = "org.hamcrest:hamcrest-core:1.2"
 jmock = "org.jmock:jmock:2.5.1"
@@ -14,7 +14,7 @@ objenesis = "org.objenesis:objenesis:1.2"
 
 allprojects {
   group = "org.spockframework"
-  version = "0.6-groovy-1.8-SNAPSHOT"
+  version = "0.6-groovy-1.7-SNAPSHOT"
 
   apply plugin: "idea"
   apply plugin: "eclipse"
