--- a/spock-spring/build.gradle
+++ b/spock-spring/build.gradle
@@ -11,6 +11,6 @@ dependencies {
   testCompile "org.springframework:spring-core:$springVersion"
   testCompile "org.springframework:spring-jdbc:$springVersion"
   testCompile "org.springframework:spring-tx:$springVersion"
-  testRuntime h2database
-  testRuntime log4j
+  testRuntime libs.h2database
+  testRuntime libs.log4j
 }
