--- a/spock-specs/build.gradle
+++ b/spock-specs/build.gradle
@@ -1,13 +1,13 @@
 dependencies {
   testCompile project(":spock-core")
-  testCompile junit
-  testCompile easymock
-  testCompile jmock_junit4
-  testCompile jmock
-  testCompile mockito
-  testRuntime asm
-  testRuntime cglib
-  testRuntime objenesis
-  testRuntime h2database
+  testCompile libs.junit
+  testCompile libs.easymock
+  testCompile libs.jmock_junit4
+  testCompile libs.jmock
+  testCompile libs.mockito
+  testRuntime libs.asm
+  testRuntime libs.cglib
+  testRuntime libs.objenesis
+  testRuntime libs.h2database
 }
 
