--- a/spock-tapestry/build.gradle
+++ b/spock-tapestry/build.gradle
@@ -11,6 +11,6 @@ dependencies {
   compile "org.apache.tapestry:tapestry-ioc:5.2.4"
   compile "org.apache.tapestry:tapestry5-annotations:5.2.4"
   compile "org.slf4j:slf4j-api:1.6.1"
-  compile junit
+  compile libs.junit
 }
 
