--- a/spock-core/build.gradle
+++ b/spock-core/build.gradle
@@ -1,4 +1,6 @@
-applyReleaseProfile(project)
+apply from: profile("publishMaven")
+
+description = "Spock Framework - Core Module"
 
 dependencies {
   compile libs.asm
