--- a/gradle/common.gradle
+++ b/gradle/common.gradle
@@ -1,2 +1,4 @@
 isSnapshotVersion = project.version.endsWith("-SNAPSHOT")
 isRootProject = project == project.rootProject
+isGrailsPlugin = project.path == ":spock-grails"
+grailsVersion = "1.3.7"
