--- a/spock-grails/application.properties
+++ b/spock-grails/application.properties
@@ -1,4 +1,5 @@
-#Grails Metadata file
-#Wed May 12 00:50:30 GMT+00:00 2010
-app.grails.version=1.3.7
+#Grails Descriptor updated by grails-maven-plugin on Sun Apr 03 16:45:40 EST 2011
+#Sun Apr 03 16:45:40 EST 2011
+app.version=0.6-groovy-1.7-SNAPSHOT
+app.grails.version=1.3.4
 app.name=spock-grails
