Added “jar” and “build” tasks for the grails plugin.

--- a/spock-grails/build.gradle
+++ b/spock-grails/build.gradle
@@ -37,3 +37,9 @@ task uploadArchives << {
     grailsTask("release-plugin", args)
   }
 }
+
+task jar << {
+  grailsTask("package-plugin")
+}
+
+task build(dependsOn: [test, jar]) << {}
