--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
             <dependency>
               <groupId>org.codehaus.groovy</groupId>
               <artifactId>groovy-all</artifactId>
-              <version>1.8.0-rc-2-SNAPSHOT</version>
+              <version>1.8.0-rc-4</version>
             </dependency> 
             <dependency> <!-- required by GMaven's execute goal -->
                <groupId>org.apache.ant</groupId>
@@ -135,7 +135,7 @@
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy-all</artifactId>
-        <version>1.8.0-rc-2-SNAPSHOT</version>
+        <version>1.8.0-rc-4</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
