--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Feb 28 05:17:33 GMT+00:00 2011
+#Thu Apr 28 12:51:01 CEST 2011
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://gradle.artifactoryonline.com/gradle/distributions/gradle-1.0-milestone-1-bin.zip
+distributionUrl=http\://gradle.artifactoryonline.com/gradle/distributions/gradle-1.0-milestone-3-bin.zip
