--- a/spock-example/build.gradle
+++ b/spock-example/build.gradle
@@ -15,7 +15,7 @@ repositories {
 
 dependencies {
   // mandatory dependencies for using Spock
-  groovy "org.codehaus.groovy:groovy-all:1.8.0-beta-3-SNAPSHOT"
+  groovy "org.codehaus.groovy:groovy-all:1.8.0"
   testCompile "org.spockframework:spock-core:0.6-groovy-1.8"
 
   // optional dependencies for using Spock
