--- a/spock-example/build.gradle
+++ b/spock-example/build.gradle
@@ -16,7 +16,7 @@ repositories {
 dependencies {
   // mandatory dependencies for using Spock
   groovy "org.codehaus.groovy:groovy-all:1.8.0"
-  testCompile "org.spockframework:spock-core:0.6-groovy-1.8"
+  testCompile "org.spockframework:spock-core:0.6-groovy-1.8-SNAPSHOT"
 
   // optional dependencies for using Spock
   testCompile "org.hamcrest:hamcrest-core:1.2" // only necessary if Hamcrest matchers are used
